fix: remove extra space from the tooltip due to arrow pointer

--- a/styles/linter-ui.less
+++ b/styles/linter-ui.less
@@ -61,9 +61,14 @@
     // Arrow pointer
     &:last-child::after {
       content: '';
+      // so the arrow does not take a row in the tooltip
+      display: block;
+      width: 0;
+      // position it below the tooltip
       position: relative;
       left: -20px;
-      top: -2px;
+      top: 3px;
+      // triangle
       border-top: 0 solid transparent;
       border-right: 0 solid transparent;
       border-bottom: 8px solid;
